Add AI briefing for 2026-02-24

--- a/briefings/2026-02-24.md
+++ b/briefings/2026-02-24.md
@@ -46,10 +46,10 @@
   How OpenAI built a real-time access system combining rate limits, usage tracking, and credits to pow... [查看](https://openai.com/index/beyond-rate-limits)
 
 - **Kimi** Kimi 搜索
-  { "content": [ { "type": "text", "text": "{ "organic": [ { "title": "#Kimi最新模型编程能力超越GPT o3-mini#... ... [查看](#)
+  { "content": [ { "type": "text", "text": "{ "organic": [ { "title": "解决传统架构记忆瓶颈 MiniMax发布新一代模型 — 新京报... [查看](#)
 
 - **Qwen** Qwen 搜索
-  { "content": [ { "type": "text", "text": "{ "organic": [ { "title": "阿里巴巴发布千问Qwen3.5-Plus模型,多项基准表现超越... [查看](#)
+  { "content": [ { "type": "text", "text": "{ "organic": [ { "title": "阿里巴巴发布新一代图像生成及编辑模型Qwen-Image-2.... [查看](#)
 
 ---
 
@@ -70,7 +70,7 @@
 
 ---
 
-*信息来源: openai.com/rss, minimax_search*
+*信息来源: minimax_search, openai.com/rss*
 
 ---
 
